# llm-tasks

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  system_prompt.md  training.py  tsconfig.tsbuildinfo
.github/workflows/: npm-publish.yml
agents/: readme.md
chat/: .env.example  instrumentation.ts  jest.config.cjs  package-lock.json  package.json  system_prompt.md  tsconfig.tsbuildinfo
chat/app/: globals.css  layout.tsx  page.tsx
chat/app/settings/: page.tsx
chat/components/assistant-ui/: a2a-tool.tsx  agent-settings-panel.tsx  agent-thread-bootstrap.tsx  attachment.tsx  chat-markdown.tsx  cli-run-tool.tsx  default-tool.tsx  find-skills-tool.tsx  memory-tool.tsx  model-selector.tsx  sidebar.tsx  skill-tool.tsx  thread.tsx
chat/components/settings/: cli-always-allow-tab.tsx  model-settings-tab.tsx  skills-settings-tab.tsx
chat/lib/: agent-chat-transport.ts  agent-name.ts  agent-thread-list-adapter.ts  ai-download.ts  chat-models.ts  deepseek-provider.test.ts  deepseek-provider.ts  global-settings.ts  global-skills-folder-import.ts  global-skills-paths.ts  index.ts  main-agent-id.ts  ollama-provider.ts  openai-provider.test.ts  openai-provider.ts  remote-thread-list-helpers.ts  tool-approval-response-context.tsx  use-agent-chat-runtime.ts
chat/skills/: cursor-rules.md  python-venv.md
scripts/: ensure-better-sqlite3.mjs
src/app/: page.tsx
src/lib/: chat-models.ts  data-root.ts  global-settings.ts  openai-provider.test.ts  openai-provider.ts  tool-approval-index-store.ts  use-agent-chat-runtime.ts
(+34 files in other folders)
