[project]
name = "llm-tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.1.1",
]

[project.optional-dependencies]
train = [
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "peft>=0.14.0",
    "torch>=2.2.0",
    "transformers>=4.48.0",
    "trl>=0.15.0",
]
